@@ -1,3 +1,7 @@
+2021-06-29  Omar Polo  <op@omarpolo.com>
+
+	* gmid.c (main): use getopt_long, add --help as synonym of -h and -V/--version
+
 2021-06-17  Omar Polo  <op@omarpolo.com>
 
 	* gmid.1: document `log' option
